Remove keys for now

--- a/auth.env
+++ b/auth.env
@@ -2,9 +2,9 @@
 
 export SPACERACE_DOMAIN=https://dummydomain1.auth0.com/
 
-export SPACERACE_CLIENT_ID=YQeCoxo4v19DJvg6DtsI5BnlgZxIG60q
-export SPACERACE_CLIENT_SECRET=PZhl-V-75tosknrGfh3d02GWn5n0tnW8IfLV4uXZWkLhTSYwy6JTtFDBovyq6DVn
+export SPACERACE_CLIENT_ID=
+export SPACERACE_CLIENT_SECRET=
 export SPACERACE_CALLBACK_URL=http://localhost:3000/callback
 
-export GOOGLE_CLIENT_ID=410115020967-21hbg4h9lk8si3gh21rbd01ekv2m5is2.apps.googleusercontent.com
-export GOOGLE_CLIENT_SECRET=YmVuXuzMd4ztXx_3JZAg6inm
+export GOOGLE_CLIENT_ID=
+export GOOGLE_CLIENT_SECRET=
